syntax = "proto3";

package AuthCheck;

service AuthCheck {
  // Provides a value for each key request
  rpc countCheck (stream Request) returns (stream Response) {}
  // Remove count check when login success
  rpc removeCountCheck (Request) returns (Response) {}
  // heath check
  rpc heathCheck (stream Ping) returns (stream Pong) {}
  // get date block 
  rpc dateBlock (stream Request) returns (stream Response) {}
}

// The request message containing the key

message Ping {
    int32 status = 1;
    string message = 2;
    string token = 3;
}

message Pong {
    int32 status = 1;
    string message = 2;
    string token = 3;
}

message Request {
  string username =1;
  string token = 2;
}

// The response message containing the value associated with the key
message Response {
  string status = 1;
  string message = 2;
  string token = 3;
}
